umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_click_reactants.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 2
  summaries:
    - sum_formula: C7H10
      atom_count: 17
      bond_count: 17
      property_count: 0
    - sum_formula: C7H13N3
      atom_count: 23
      bond_count: 23
      property_count: 0
molecule_lenient:
  success: true
  compound_count: 2
  summaries:
    - sum_formula: C7H10
      atom_count: 17
      bond_count: 17
      property_count: 0
    - sum_formula: C7H13N3
      atom_count: 23
      bond_count: 23
      property_count: 0
extended_molecule:
  success: true
  compound_count: 2
  extended_summaries:
    - sum_formula: C7H10
      atom_count: 17
      bond_count: 17
      extended_atoms: 0
      extended_bonds: 0
      property_count: 0
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C7H13N3
      atom_count: 23
      bond_count: 23
      extended_atoms: 0
      extended_bonds: 0
      property_count: 0
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 2
  extended_summaries:
    - sum_formula: C7H10
      atom_count: 17
      bond_count: 17
      extended_atoms: 0
      extended_bonds: 0
      property_count: 0
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C7H13N3
      atom_count: 23
      bond_count: 23
      extended_atoms: 0
      extended_bonds: 0
      property_count: 0
      rgroup_count: 0
      sgroup_count: 0
